set up books grid

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   display: flex;
+  flex-direction: column;
   gap: 30px;
 }
 
@@ -17,9 +18,12 @@ button {
 
 .book-container {
   display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 30px;
 }
 
 .card {
+  display: grid;
   border: solid black;
   padding: 20px;
 }
