--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ form {
 
 button {
   width: 80px;
-  align-self: center;
+  place-self: center;
 }
 
 .book-container {
@@ -24,6 +24,12 @@ button {
 
 .card {
   display: grid;
+  grid-template-rows: repeat(4,1fr);
   border: solid black;
   padding: 20px;
+}
+
+p {
+  align-self: center;
+  margin: 8px;
 }
